--- a/src/index.css
+++ b/src/index.css
@@ -8,27 +8,11 @@
   background-color: #E6E5E3;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 button {
@@ -46,4 +30,16 @@ button {
 .error-message {
   color: red;
   margin: 0;
+}
+
+.container {
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  background-color: #E6E5E3;
+  grid-template-columns: 150px 1fr;
+  grid-template-rows: 95px 1fr;
+  grid-template-areas: 
+  "header header"
+  "navigation main";
 }
