--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,24 @@
 header {
     background-color: #4A5759;
     grid-area: header;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 50px;
+    padding-right: 20px;
+}
+
+header img {
+    height: 50px;
+    padding-left: 50px;
+}
+
+.profile-card-container {
+    background-color: #26294C;
+    display: grid;
+    place-content: center;
+    border-radius: 50%;
+    height: 50px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
