--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  place-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 button {
@@ -42,4 +42,11 @@ button {
   grid-template-areas: 
   "header header"
   "navigation main";
+}
+
+.login-register-container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-content: center;
 }
