--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,17 +1,83 @@
 main {
     margin-right: 1rem;
+    margin-top: 1rem;
 }
 
 .questions-ul {
     padding: 0;
     list-style: none;
+    display: grid;
+    gap: 1rem;
 }
 
 .add-question-button {
     padding: 5px 15px;
     background-color: #673C4F;
+    display: grid;
+    place-content: center;
+    border-radius: 20px;
 }
 
 .add-question-button img {
     height: 20px;
+}
+
+.add-filter-container {
+    padding-left: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1.3fr 250px;
+}
+
+#filter {
+    background-color: white;
+    color: black;
+    padding: 4px 10px;
+    border: none;
+    border-radius: 10px;
+}
+
+.filter-container {
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    gap: 1rem;
+}
+
+.filter-container img {
+    height: 30px;
+}
+
+.search-container {
+    background-color: white;
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    width: min-content;
+    padding-right: 20px;
+    border-radius: 10px;
+    place-content: center;
+}
+
+.search-container:focus-within {
+    outline: black 1px solid;
+}
+
+.search-container img {
+    height: 20px;
+}
+
+.search-container input {
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    color: black;
+    width: 20rem;
+}
+
+.search-container input:focus {
+    outline: none;
+}
+
+.search-icon-container {
+    display: grid;
+    place-content: center;
 }
