--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -43,6 +43,12 @@ main {
     gap: 1rem;
 }
 
+#filter:focus {
+    border: none !important; 
+    outline: none !important;
+    box-shadow: none !important;
+}
+
 .filter-container img {
     height: 30px;
 }
