--- a/src/components/question/question.css
+++ b/src/components/question/question.css
@@ -4,6 +4,7 @@
     padding: 20px 30px;
     border-radius: 20px;
     gap: 1rem;
+    position: relative;
 }
 
 .profile-card-question-container {
@@ -71,7 +72,7 @@
     width: min-content;
     padding: 0 10px;
     border-radius: 8px;
-    place-content: center;
+    align-items: center;
     grid-area: forecast;
 }
 
@@ -132,4 +133,60 @@
     padding: 0;
     display: grid;
     border-top: 1px solid rgb(175, 175, 175);
+}
+
+.resolve-container {
+    width: fit-content;
+    grid-area: resolution;
+}
+
+.resolve-drop-down-container {
+    background-color: white;
+    position: absolute;
+    right: 30px;
+    top: 100px;
+    z-index: 1;
+    width: 100px;
+    border-radius: 8px;
+    border: 1px solid #515A47;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+
+.resolve-drop-down-ul {
+    list-style: none;
+    padding: 10px
+}
+
+.green-circle {
+    height: 15px;
+    width: 15px;
+    background-color: #86EFAC;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+}
+
+.red-circle {
+    height: 15px;
+    width: 15px;
+    background-color: #EF9F9F;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+}
+
+.resolve-drop-down-ul li p {
+    margin: 0;
+    color: black;
+}
+
+.resolve-drop-down-ul li button {
+    background-color: white;
+    width: min-content;
+    height: min-content;
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    gap: 0.8rem;
+    padding: 0;
+    align-items: center;
 }
