--- a/src/components/question/question.css
+++ b/src/components/question/question.css
@@ -27,7 +27,7 @@
 }
 
 .more-button {
-    background-color: #673C4F;
+    background-color: #515A47;
     width: 25px;
     height: 20px;
     padding: 0;
@@ -112,20 +112,29 @@
 .question-container {
     display: grid;
     grid-template-columns: 30px 1fr min-content;
-    grid-template-areas: 'profile question more forecast';
+    grid-template-areas: 'profile question forecast';
     gap: 1rem;
 }
 
 .resolution-container {
     display: grid;
-    grid-template-columns: 1fr min-content;
-    grid-template-areas: '. resolution';
+    grid-template-columns: 1fr min-content min-content;
+    grid-template-areas: '. more resolution';
     gap: 10px;
+}
+
+.forecast-options-container {
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    grid-template-areas: 'forecast options';
+    gap: 0.2rem;
 }
 
 .more-container {
     display: grid;
     place-content: center;
+    width: fit-content;
+    grid-area: more;
 }
 
 .forecasts-ul {
@@ -189,4 +198,54 @@
     gap: 0.8rem;
     padding: 0;
     align-items: center;
+}
+
+.options-button {
+    width: 20px;
+    height: 30px;
+    padding: 0;
+    display: grid;
+    place-content: center;
+    background-color: white;
+}
+
+.options-button img {
+    height: 15px;
+}
+
+.options-drop-down-container {
+    background-color: white;
+    position: absolute;
+    right: 30px;
+    top: 60px;
+    z-index: 1;
+    width: 170px;
+    border-radius: 8px;
+    border: 1px solid #515A47;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+
+.options-drop-down-ul {
+    list-style: none;
+    padding: 10px
+}
+
+.options-drop-down-ul li button {
+    background-color: white;
+    width: fit-content;
+    height: min-content;
+    padding: 0;
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    gap: 0.8rem;
+}
+
+.options-drop-down-ul li p {
+    margin: 0;
+    color: black;
+    font-weight: normal;
+}
+
+.options-drop-down-ul li button img {
+height: 20px;
 }
