add profile page

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 
 .error-message {
