--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -6,7 +6,7 @@
     margin-bottom: 2rem;
     margin-left: 20px;
     padding-bottom: 20px;
-    border-bottom: 1px solid rgb(170, 170, 170);
+    border-bottom: 1px solid rgb(179, 178, 178);
 }
 
 h2 {
@@ -16,21 +16,28 @@ h2 {
 .profile-form-container {
     padding-left: 20px;
     display: grid;
+    grid-template-rows: repeat(3, min-content);
     gap: 2rem;
 }
 
 .profile-form-container input {
     width: 500px;
+    height: min-content;
 }
 
 .save-button-container {
     display: grid;
     justify-content: right;
-    height: 390px;
     align-items: end;
 }
 
 .save-button-container button {
     background-color: #673C4F;
     padding: 8px 50px;
+}
+
+.profile-main {
+    display: grid;
+    grid-template-rows: min-content 1fr;
+    padding-bottom: 1rem;
 }
