--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -16,8 +16,12 @@ h2 {
 .profile-form-container {
     padding-left: 20px;
     display: grid;
-    grid-template-rows: repeat(3, min-content);
+    grid-template-rows: repeat(4, min-content);
     gap: 2rem;
+}
+
+.profile-form-container p {
+    margin: 0;
 }
 
 .profile-form-container input {
