--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,8 @@ main::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
   border-radius: 7px;
 }
+
+.ag-theme-quartz {
+  --ag-header-background-color: #c6d6c8;
+  --ag-row-hover-color: #d8e4da;
+}
