add function and css to current selected page color

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -44,3 +44,7 @@ aside a {
 .home-text {
     color: #515a47;
 }
+
+.current {
+    filter: brightness(0) saturate(100%) invert(33%) sepia(29%) saturate(269%) hue-rotate(46deg) brightness(93%) contrast(89%);
+}
