--- a/src/pages/stats/stats.css
+++ b/src/pages/stats/stats.css
@@ -1,7 +1,8 @@
 .stats-container {
     margin-left: 20px;
     display: grid;
-    grid-template-columns: auto min-content;
+    gap: 30px;
+    justify-items: center;
 }
 
 .briar-score-container {
